test_regress/t/t_interface_generic_modport_bad2.out
%Error: t/t_interface_generic_modport_bad2.v:17:7: Attempt to drive input-only modport: 'v'
                                                 : ... note: In instance 't.genericModule'
   17 |     a.v = 10;
      |       ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
